02_provision_ec2/main.tf
provider "aws" {
  region = "ap-south-1"
}

variable "vpc_cidr_block" {
  description = "vpc_cidr_block"
}

variable "subnet_cidr_block" {
  description = "subnet_cidr_block"
}

variable "availability_zone" {
  description = "availability_zone"
}

variable "env_prefix" {
  description = "env_prefix"
}

variable "my_ip" {
  description = "my_ip"
}

variable "instance_type" {
  description = "instance_type"
}

variable "public_key_location" {
  description = "public_key_location"
}

resource "aws_vpc" "myapp_vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    "Name" = "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "myapp_subnet_1" {
  vpc_id            = aws_vpc.myapp_vpc.id
  cidr_block        = var.subnet_cidr_block
  availability_zone = var.availability_zone
  tags = {
    "Name" = "${var.env_prefix}-subnet-1"
  }
}

resource "aws_internet_gateway" "myapp_internet_gateway" {
  vpc_id = aws_vpc.myapp_vpc.id
  tags = {
    "Name" = "${var.env_prefix}-igw"
  }
}

resource "aws_default_route_table" "main_rtb" {
  default_route_table_id = aws_vpc.myapp_vpc.default_route_table_id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp_internet_gateway.id
  }
  tags = {
    "Name" = "${var.env_prefix}-main-rtb"
  }
}

resource "aws_default_security_group" "default_sg" {
  # name   = "myapp-sg"
  vpc_id = aws_vpc.myapp_vpc.id

  ingress {
    from_port   = 22 # SSH
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port   = 8080 # NGINX
    to_port     = 8080
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    "Name" = "${var.env_prefix}-default-sg"
  }
}

/* Creating own route table instead of using default one
resource "aws_route_table" "myapp_route_table" {
  vpc_id = aws_vpc.myapp_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp_internet_gateway.id
  }
  tags = {
    "Name" = "${var.env_prefix}-rtb"
  }
}

resource "aws_route_table_association" "a_rtb_subnet" {
  route_table_id = aws_route_table.myapp_route_table.id
  subnet_id      = aws_subnet.myapp_subnet_1.id
}
*/

/* Creating own security group instead of using default one
resource "aws_security_group" "myapp_sg" {
  name   = "myapp-sg"
  vpc_id = aws_vpc.myapp_vpc.id

  ingress {
    from_port   = 22 # SSH
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port   = 8080 # NGINX
    to_port     = 8080
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    "Name" = "${var.env_prefix}-sg"
  }
}
*/

data "aws_ami" "latest_amazon_linux_image" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "name"
    values = ["al2023-ami-2023.*-x86_64"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  filter {
    name   = "architecture"
    values = ["x86_64"]
  }
}

output "aws_ami_id" {
  value = data.aws_ami.latest_amazon_linux_image.id
}

output "ec2_public_ip" {
  value = aws_instance.myapp_server.public_ip
}

resource "aws_key_pair" "ssh_key" {
  key_name   = "server-key"
  public_key = file(var.public_key_location)
}

resource "aws_instance" "myapp_server" {
  ami           = data.aws_ami.latest_amazon_linux_image.id
  instance_type = var.instance_type

  subnet_id              = aws_subnet.myapp_subnet_1.id
  vpc_security_group_ids = [aws_default_security_group.default_sg.id]
  availability_zone      = var.availability_zone

  associate_public_ip_address = true
  key_name                    = aws_key_pair.ssh_key.key_name

  user_data                   = file("entry-script.sh")
  user_data_replace_on_change = true

  tags = {
    "Name" = "${var.env_prefix}-server"
  }
}
